name:                 monad-retry
version:              0.1
synopsis:             Retry MonadIO-actions.
license:              OtherLicense
license-file:         LICENSE
author:               Toralf Wittner
maintainer:           Toralf Wittner <tw@dtex.org>
copyright:            Copyright (c) 2013 Toralf Wittner
stability:            experimental
category:             Control
build-type:           Simple
cabal-version:        >= 1.10

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs -funbox-strict-fields
    ghc-prof-options: -prof -auto-all

    exposed-modules:
        Control.Monad.Retry
      , Control.Monad.Retry.Legacy

    build-depends:
        base          > 4 && < 5
      , transformers
      , either        >= 3.4
      , exceptions    >= 0.2
      , MonadCatchIO-transformers >= 0.3
