name:                 monad-retry
version:              0.2.2
synopsis:             Retry MonadIO-actions.
license:              OtherLicense
license-file:         LICENSE
author:               Toralf Wittner
maintainer:           Toralf Wittner <tw@dtex.org>
copyright:            Copyright (c) 2013 Toralf Wittner
stability:            experimental
category:             Control
build-type:           Simple
cabal-version:        >= 1.10

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs
    ghc-prof-options: -prof -auto-all

    exposed-modules:  Control.Monad.Retry

    build-depends:
        base          == 4.*
      , transformers  >= 0.3
      , exceptions    >= 0.2
